--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 LLM_HOST=http://localhost:11434
 LLM_API_KEY=ollama
 LLM_NAME=llama3.2
+TMDB_API_KEY=your_api_token
+EMBEDDING_MODEL_NAME=text-embedding-3-small
