--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "openai>=1.58.1",
     "pydantic-settings>=2.7.0",
     "pydantic>=2.10.4",
+    "smolagents[litellm]>=1.10.0",
     "tenacity>=9.0.0",
     "uvicorn>=0.34.0",
 ]
