--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "apscheduler>=3.11.0",
     "fastapi[standard]>=0.115.6",
     "openai>=1.58.1",
     "pydantic-settings>=2.7.0",
