The app is raw but everythin works via telegram
Signed-off-by: Vladislav Sokolovskii <sokolovskii.vladislav@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ LLM_API_KEY=ollama
 LLM_NAME=llama3.2
 TMDB_API_KEY=your_api_token
 EMBEDDING_MODEL_NAME=text-embedding-3-small
+TELEGRAM_BOT_TOKEN=your_bot_token
